# InfluenceMaximizationBenchmarker

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  evaluator.cpp  main.cpp
SMFT/: CMakeLists.txt
SMFT/test/: test.c
cmake/: CLI11.cmake  ccache.cmake  flags.cmake  fmt.cmake  gtest.cmake  linker.cmake  options.cmake  span.cmake  tbb.cmake
data/: epinions.txt  epinions_seed_set.txt
doc/: input.md
include/: Benchmarker.hpp  Edge.hpp  Graph.hpp  IMBProgramOptions.hpp  Parser.hpp  Timer.h
include/diffusion/: DiffusionFactory.hpp  DiffusionModelInterface.hpp  IndependentCascade.hpp  LinearThreshold.hpp
include/solver/: CelfGreedy.hpp  IMM.hpp  IPA.hpp  SolverFactory.hpp  SolverInterface.hpp  WeightedDegree.hpp
include/solver/iterative/: EaSyIM.hpp  EaSyIM_Delta.hpp  UpdateApproximation.hpp
include/solver/simple/: DegreeDiscountSolver.hpp  HighDegree.hpp  PageRankSolver.hpp  Random.hpp  WeightedPageRank.hpp
include/util/: Definitions.hpp  Range.hpp
src/: Edge.cpp  Graph.cpp  IMBProgramOptions.cpp  Parser.cpp
src/diffusion/: IndependentCascade.cpp  LinearThreshold.cpp
src/solver/: CelfGreedy.cpp  IMM.cpp  IPA.cpp  SolverFactory.cpp  WeightedDegree.cpp
src/solver/iterative/: EaSyIM.cpp  EaSyIM_Delta.cpp  UpdateApproximation.cpp
src/solver/simple/: DegreeDiscountSolver.cpp  HighDegree.cpp  PageRankSolver.cpp  Random.cpp  WeightedPageRank.cpp
